# wasm-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TestMain.cpp  TestWasmEdgeMain.cpp  TestWasmtimeMain.cpp  WasmFunction.cpp  WasmFunction.h  gcd.wat
demo/calcutor/: Cargo.toml
demo/calcutor/src/: lib.rs
demo/feishu/feishu/: Cargo.toml
demo/feishu/feishu/src/: lib.rs
demo/feishu/go/: go.sum  main.go
demo/string/: README.md
demo/string/say/: Cargo.toml
demo/string/say/src/: lib.rs
