[package]
name = "feishu"
version = "0.1.0"
authors = ["arcosx <arcosx@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "feishu_wasm"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
num-integer = "0.1"
sha3 = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.61"
wasmedge_http_req  = "0.8.1"

